[package]
name = "hevy-bridge"
version = "0.1.0"
edition = "2024"
description = "A CLI client for the Hevy workout tracking API"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
